content/pt-br/devops/kubernetes/cka/9-Networking/case-002.yaml
---
# Create namespace frontend
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
spec: {}
status: {}
---
# Create namespace backend
apiVersion: v1
kind: Namespace
metadata:
  name: backend
spec: {}
status: {}
---
# Create namespace database
apiVersion: v1
kind: Namespace
metadata:
  name: database
spec: {}
status: {}
