content/pt-br/devops/kubernetes/cka/9-Networking/httpd-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    name: httpd
  name: httpd
spec:
  containers:
  - image: httpd
    name: httpd
    ports:
      - containerPort: 80
