content/pt-br/devops/kubernetes/cka/9-Networking/teste.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: netutils
  name: netutils
  namespace: backend
spec:
  containers:
  - image: busybox
    name: netutils
    command:
    - "sh"
    - "-c"
    - "curl -k https://google.com"
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
