content/pt-br/devops/kubernetes/cka/9-Networking/case-001.yaml
---
# Create namespace frontend
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
spec: {}
status: {}
---
# Create namespace backend
apiVersion: v1
kind: Namespace
metadata:
  name: backend
spec: {}
status: {}
---
# Create deploy backend
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: be-products-deploy
  name: be-products-deploy
  namespace: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: be-products-deploy
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: be-products-deploy
    spec:
      containers:
      - name: products
        image: rotoku/case-001-backend:v0.0.1
        ports:
        - containerPort: 5000
---
# Create service backend
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: be-products-service
  name: be-products-service
  namespace: backend
spec:
  ports:
  - name: 5000-5000
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: be-products-deploy
  type: ClusterIP
status:
  loadBalancer: {}
---
# Create namespace database
apiVersion: v1
kind: Namespace
metadata:
  name: database
spec: {}
status: {}
---
# Create deployment database
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: db-mariadb-deploy
  name: db-mariadb-deploy
  namespace: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-mariadb-deploy
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: db-mariadb-deploy
    spec:
      containers:
      - name: mariadb
        image: mariadb:11.6
        ports:
        - containerPort: 3306
status: {}
---
# Create service (clusterip) database
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: db-mariadb-service
  name: db-mariadb-service
  namespace: database
spec:
  ports:
  - name: 3306-3306
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: db-mariadb-deploy
  type: ClusterIP
status:
  loadBalancer: {}
---
